Start adding support for Toybox to Vari-Joern's product-based analysis + Add some documentation.